Bug 160767 - Mac Mouse and Trackpad Freezes Repeatedly, only in LibreOffice Writer, Mac Sonoma
Summary: Mac Mouse and Trackpad Freezes Repeatedly, only in LibreOffice Writer, Mac So...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.5.6.2 release
Hardware: ARM macOS (All)
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.8.0 target:24.2.4
Keywords:
Depends on:
Blocks:
 
Reported: 2024-04-21 22:21 UTC by Geo
Modified: 2024-05-14 05:34 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Geo 2024-04-21 22:21:06 UTC
When working in a LibreOffice writer document (on MI Mac, with Sonoma, the ability to use the trackpad or mouse within the document itself freezes. The keys, up down, etc., continue to work. The freeze stops after a few saves of the document.

It happens with my MacBook Pro built in trackpad and for any external mouse I use, Bluetooth, wired, etc. It started back in about December 2023 and does not matter what subsequent version of LibreOffice, either stable or otherwise I use.

I am on an M1 Mac and am now up to the latest Sonoma 14.4.1, but this was true on the OS version that was out in December. I am now on LibreOffice 7.6.6.3, but it was true on the stable version back in December also.

I have tried everything, including a clean install of the OS, etc., but nothing works. I probably lose at least an hour in total in a business day having to wait for the freezes that occur continuously to end and may have to soon make a switch to something else if this can’t solved.

I do not have this problem with any other software.
Comment 1 Stéphane Guillou (stragu) 2024-05-07 04:04:04 UTC
Could you please test LO version 24.2 and let us know if it still happens?
Thank you.
Comment 2 Patrick (volunteer) 2024-05-07 14:23:08 UTC
(In reply to Geo from comment #0)
> When working in a LibreOffice writer document (on MI Mac, with Sonoma, the
> ability to use the trackpad or mouse within the document itself freezes. The
> keys, up down, etc., continue to work. The freeze stops after a few saves of
> the document.

I think I might know what is causing this bug: if I have automatic spellchecking enabled, spellchecking does not pause when you swipe the trackpad but pressing any key does. I am guessing that the freezing stops when LibreOffice has finished its initial spellchecking of the document.

If I remove the following fix for tdf#155266 that I made back in December 2023, swiping works while automatic spellchecking is enabled:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=9f92a39234dfae40fe19ab6fa47caf8b21dd8847

So, I will see if I can rework the fix for tdf#155266 to fix the "swipes are ignored during spellchecking" behavior.

In the meantime, a temporary workaround that I found is to switch to using the Page-Up (fn-arrowup) or Page-Down (fn-arrowdown) to interrupt the automatic spellchecking.

I'll post again when I have a fix that you can test.
Comment 3 Commit Notification 2024-05-07 23:40:30 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/92815f3a464b447898ecf52492247335228e4a72

tdf#160767 skip fix for tdf#155266 when the event hasn't changed

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Patrick (volunteer) 2024-05-07 23:56:41 UTC
I have committed a fix this bug. The fix should be in tomorrow's (08 May 2024) nightly master builds:

https://dev-builds.libreoffice.org/daily/master/current.html

Note for macOS testers: the nightly master builds install in /Applications/LibreOfficeDev.app. These builds are not codesigned like regular LibreOffice releases so you will need to execute the following Terminal command after installation but before you launch /Applications/LibreOfficeDev:

xattr -d com.apple.quarantine /Applications/LibreOfficeDev.app

@Telesto do any of the bugs in the following comment reappear in tomorrow's nightly master build?:

https://bugs.documentfoundation.org/show_bug.cgi?id=155266#c74
Comment 5 Telesto 2024-05-08 00:07:38 UTC
(In reply to Patrick Luby (volunteer) from comment #2)
> I think I might know what is causing this bug: if I have automatic
> spellchecking enabled, spellchecking does not pause when you swipe the
> trackpad but pressing any key does. I am guessing that the freezing stops
> when LibreOffice has finished its initial spellchecking of the document.

I'm able to reproduce this too
Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: aef28c23adc87b8e26eacb56c7dbcf652e907fb9
CPU threads: 8; OS: macOS 14.3; UI render: Skia/Raster; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded

I will retest with a fresh build with patch when available and check for bug 155266 too
Comment 6 Commit Notification 2024-05-14 05:34:47 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/812c3cf069b068b75d01662c241b52bec2dd2928

tdf#160767 skip fix for tdf#155266 when the event hasn't changed

It will be available in 24.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.